# syscalls-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  SateyFindings.md
linux-sys/: Cargo.toml  README.md  bindgen_generate.sh  build.rs  generate_bindgen.py  wrapper.h  wrapper.h.gch
linux-sys/headers_install/arm/include/asm/: unistd-eabi.h  unistd-oabi.h
linux-sys/headers_install/arm/include/drm/: drm_fourcc.h
linux-sys/headers_install/arm64/include/asm/: hwcap.h
linux-sys/headers_install/hexagon/include/asm/: setup.h
linux-sys/headers_install/hexagon/include/sound/: asound.h
linux-sys/headers_install/mips/include/asm/: inst.h  siginfo.h  signal.h  socket.h  unistd_nr_n32.h  unistd_nr_n64.h  unistd_nr_o32.h
linux-sys/headers_install/powerpc/include/asm/: papr_pdsm.h  signal.h
linux-sys/headers_install/powerpc/include/linux/: fanotify.h
linux-sys/headers_install/riscv/include/linux/: audit.h  ethtool.h  ethtool_netlink.h
linux-sys/headers_install/s390/include/asm/: bpf_perf_event.h  ipl.h  pkey.h  posix_types.h  ptrace.h  runtime_instr.h  schid.h  sie.h  signal.h  zcrypt.h
linux-sys/headers_install/sparc/include/asm/: fbio.h  ioctls.h  mman.h  openpromio.h  psr.h  psrcompat.h  ptrace.h  setup.h  siginfo.h  signal.h  socket.h  swab.h  termbits.h  termios.h  traps.h  unistd.h  unistd_32.h  unistd_64.h
linux-sys/headers_install/sparc/include/linux/: rtc.h
linux-sys/src/: lib.rs
linux-sys/src/arm/: fcntl.rs  fs.rs  mod.rs  time.rs
linux-sys/src/arm64/: fcntl.rs  fs.rs  time.rs
linux-sys/src/generic/: fcntl.rs  mod.rs
linux-sys/src/hexagon/: fcntl.rs  fs.rs  mod.rs  time.rs
linux-sys/src/mips/: fcntl.rs  fs.rs  time.rs
linux-sys/src/powerpc/: fcntl.rs  fs.rs  mod.rs  time.rs
linux-sys/src/riscv/: fcntl.rs  fs.rs  mod.rs  time.rs
linux-sys/src/s390/: fcntl.rs  fs.rs  time.rs
linux-sys/src/sparc/: fcntl.rs  fs.rs  time.rs
linux-sys/src/x86/: fcntl.rs  fs.rs  mod.rs  time.rs
src/: cmsg.rs  lib.rs  socket.rs  utils.rs
(+12 files in other folders)
